# Novomatic-Internship-2025

./: .gitignore  CMakeLists.txt  README.md
Task1/: CMakeLists.txt  README.md
Task1/headers/: Trie.hpp  config.hpp
Task1/src/: SearchComplete.cpp
Task1/tests/: Test.cpp
Task1/tests/inputs/: output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  test1_input.txt  test2_input.txt  test3_input.txt  test4_input.txt  test5_input.txt
Task2/: CMakeLists.txt  README.md
Task2/dependencies/glad/: glad.h
Task2/headers/: Renderer.hpp  Triangle.hpp  config.hpp
Task2/src/: Renderer.cpp  Triangle.cpp  Visualisation.cpp  glad.c
Task2/tests/: Test.cpp
Task3/: CMakeLists.txt  README.md
Task3/headers/: Binary.hpp  FloatType.hpp  config.hpp
Task3/tests/: FloatType.cpp  Test.cpp
